ajustando algumas definicoes do Semantic Analyser